Update README and configuration files to enhance documentation and add health check settings for auth and user services. Expand development documentation to include Elasticsearch integration details and service architecture updates, ensuring comprehensive guidance for developers.

--- a/configs/beehive-auth-example.yaml
+++ b/configs/beehive-auth-example.yaml
@@ -39,3 +39,12 @@ log:
   max-backups: 3
   max-age: 28
   compress: true
+
+# 健康检查配置
+health:
+  # 健康检查端口
+  port: 8080
+  # 健康检查路径
+  path: "/health"
+  # 就绪检查路径
+  ready-path: "/ready"
