--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,7 @@
 # 配置文件（包含敏感信息，不应提交到 git）
 configs/beehive-user.yaml
 configs/beehive-auth.yaml
+configs/beehive-gateway.yaml
+configs/beehive-message.yaml
+configs/beehive-presence.yaml
+configs/beehive-search.yaml
