--- a/configs/beehive-auth-example.yaml
+++ b/configs/beehive-auth-example.yaml
@@ -1,5 +1,10 @@
 # beehive-auth 服务配置文件
 
+# HTTP 服务器配置
+insecure-serving:
+  bind-address: "0.0.0.0"
+  bind-port: 8081
+
 # gRPC 服务器配置
 grpc:
   bind-address: "0.0.0.0"
