--- a/configs/beehive-gateway-example.yaml
+++ b/configs/beehive-gateway-example.yaml
@@ -14,7 +14,7 @@ websocket:
 # gRPC 配置（用于客户端连接）
 grpc:
   bind-address: "0.0.0.0"
-  bind-port: 8080
+  bind-port: 50050  # gRPC 端口，与 HTTP 端口不同以避免冲突
   max-msg-size: 4194304  # 4MB
 
 # 微服务地址配置（支持 etcd 服务发现）
