Update .gitignore to include beehive-search.yaml and docs/dev/ directory for better file management and to prevent unnecessary tracking of development files.

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@ configs/beehive-gateway.yaml
 configs/beehive-message.yaml
 configs/beehive-presence.yaml
 configs/beehive-search.yaml
+
+docs/dev/
